--- a/module-4/lesson-7-8/index.html
+++ b/module-4/lesson-7-8/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-md-6 d-flex justify-content-start">
                <select id="region" class="form-select w-25">
-
+                  <option disabled selected>Viloyat tanlang</option>
                </select>
             </div>
          </div>
@@ -131,7 +131,7 @@
                <table class="table table-striped table-hover table-bordered table-responsive">
                   <thead>
                      <tr>
-                       <th>kun</th>
+                        <th>kun</th>
                         <th>Viloyat</th>
                         <th>sana</th>
                         <th>Tong saharlik</th>
@@ -140,12 +140,12 @@
                         <th>Asr</th>
                         <th>Shom</th>
                         <th>Hufton</th>
-                        
+
                      </tr>
                   </thead>
 
                   <tbody id="weekresult">
-                    
+
                   </tbody>
                </table>
             </div>
